--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -109,6 +109,36 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-02-18">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-2-18-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 2月18日19.1M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享" src="/uploads/20241222-1/9e2b225d869222c8f450f1935366fea1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-2-18-free-v2ray.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 2月18日19.1M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、新加坡、加拿大、欧洲、韩国、美国、香港等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-02-17">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-2-17-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 2月17日19.3M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/aa3ddc9bff6fda25db17c202e775086f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-2-17-free-v2ray.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 2月17日19.3M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、新加坡、韩国、加拿大、欧洲、香港、美国等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-02-16">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-2-16-node-share.htm" class="xcblog-blog-url">
@@ -149,16 +179,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-61176.htm" title="附近美甲美睫培训学校哪家好一点（美甲美睫美容学校）">附近美甲美睫培训学校哪家好一点（美甲美睫美容学校）</a></li>
-                        <li class="py-2"><a href="/news/article-58921.htm" title="一片片枫叶从树上落下来就像（一片片枫叶从树上落下来就像什么补充句子）">一片片枫叶从树上落下来就像（一片片枫叶从树上落下来就像什么补充句子）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-18-free-v2ray.htm" title="VPN设备 | 2月18日19.1M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 2月18日19.1M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-58313.htm" title="长沙市宠物领养中心有哪些 长沙市宠物领养中心有哪些地方">长沙市宠物领养中心有哪些 长沙市宠物领养中心有哪些地方</a></li>
+                        <li class="py-2"><a href="/news/article-66025.htm" title="上海正规宠物领养机构排名（上海2020年宠物领养活动）">上海正规宠物领养机构排名（上海2020年宠物领养活动）</a></li>
+                        <li class="py-2"><a href="/news/article-70522.htm" title="哪些属相不适合养狗狗（哪些属相不能养狗狗）">哪些属相不适合养狗狗（哪些属相不能养狗狗）</a></li>
+                        <li class="py-2"><a href="/news/article-65415.htm" title="C#基于自定义事件EventArgs实现发布订阅模式_C#教程">C#基于自定义事件EventArgs实现发布订阅模式_C#教程</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-1-node-share-links.htm" title="VPN设备 | 3月1日19.1M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 3月1日19.1M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-66661.htm" title="开动物医院什么资质可以开药（开动物医院什么资质可以开药店）">开动物医院什么资质可以开药（开动物医院什么资质可以开药店）</a></li>
                         <li class="py-2"><a href="/news/article-65416.htm" title="同城领养宠物的平台叫什么的简单介绍">同城领养宠物的平台叫什么的简单介绍</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-8-node-share-links.htm" title="VPN设备 | 3月8日22.9M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 3月8日22.9M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-57252.htm" title="中国宠物食品排名（中国宠物食品排名榜）">中国宠物食品排名（中国宠物食品排名榜）</a></li>
-                        <li class="py-2"><a href="/news/article-62378.htm" title="延吉市宠物店电话（延吉市宠物店电话地址）">延吉市宠物店电话（延吉市宠物店电话地址）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-22-free-subscribe-node.htm" title="VPN设备 | 2月22日18.5M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 2月22日18.5M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-69855.htm" title="vue中同时监听多个参数的实现_vue.js">vue中同时监听多个参数的实现_vue.js</a></li>
-                        <li class="py-2"><a href="/news/article-59463.htm" title="为什么HttpContextAccessor要这么设计?">为什么HttpContextAccessor要这么设计?</a></li>
+                        <li class="py-2"><a href="/news/article-64796.htm" title="被猫咬出血了该怎么办（被猫咬出血了有什么症状）">被猫咬出血了该怎么办（被猫咬出血了有什么症状）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-17-free-v2ray.htm" title="VPN设备 | 2月17日19.3M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 2月17日19.3M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-63559.htm" title="生物颗粒燃烧炉到底咋样（生物颗粒燃烧机怎么样）">生物颗粒燃烧炉到底咋样（生物颗粒燃烧机怎么样）</a></li>
                     </ul>
     </div>
 </div>
@@ -170,7 +200,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
