--- a/date/2025-03/page-4.htm
+++ b/date/2025-03/page-4.htm
@@ -5,18 +5,18 @@
         <link rel="canonical" href="https://vpndevice.github.io" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>免责申明 - VPN设备 机场订阅节点官网</title>
-        <meta name="keywords" content="免责申明 - VPN设备 机场订阅节点官网" />
-        <meta name="description" content="免责申明 - VPN设备 机场订阅节点官网" />
+    <title>2025-03归档 - 第3页 - VPN设备 机场订阅节点官网</title>
+        <meta name="keywords" content="2025-03归档VPN设备 机场订阅节点官网" />
+        <meta name="description" content="2025-03归档，当前是第3页" />
         <link rel="icon" href="/assets/website/img/v2rayunode/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="VPN设备 机场订阅节点官网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://vpndevice.github.io" />
     <meta property="og:site_name" content="VPN设备 机场订阅节点官网" />
-    <meta property="og:title" content="免责申明 - VPN设备 机场订阅节点官网" />
+    <meta property="og:title" content="2025-03归档 - 第3页 - VPN设备 机场订阅节点官网" />
     <meta property="og:image" content="/assets/website/img/v2rayunode/favicon.ico" />
-        <meta property="og:description" content="免责申明 - VPN设备 机场订阅节点官网" />
+        <meta property="og:description" content="2025-03归档，当前是第3页" />
         
     <meta name="applicable-device" content="pc,mobile" />
     <meta name="renderer" content="webkit" />
@@ -25,7 +25,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="免责申明 - VPN设备 机场订阅节点官网">
+    <meta name="apple-mobile-web-app-title" content="2025-03归档 - 第3页 - VPN设备 机场订阅节点官网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -64,7 +64,7 @@
      crossorigin="anonymous"></script>
 </head>
 
-<body id="page-top" data-page="newly_discovered_nodes">
+<body id="page-top" data-page="category">
         <!-- Navigation
         ==========================================-->
     <nav id="menu" class="navbar navbar-default navbar-fixed-top">
@@ -96,10 +96,10 @@
             <div class="overlay">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-12 intro-text">
-                            <h1>免责申明</h1>
+                        <div class="col-md-8 col-md-offset-2 intro-text">
+                            <h1>2025-03 归档</h1>
                             <p>
-                                <a href="/">首页</a> / 免责申明
+                                <a href="/">首页</a> / 2025-03 归档
                             </p>
                         </div>
                     </div>
@@ -112,27 +112,54 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
-                    <p>本平台专注于为用户提供V2ray、Clash等免费节点订阅服务，我们致力于为用户提供便捷、高效的网络访问体验。然而，在使用本平台服务的过程中，用户需要了解并遵守以下免责条款：</p>
-<p>一、服务内容</p>
-<p>本平台提供的所有节点订阅服务均来源于公开信息或合作伙伴，我们不对节点信息的真实性、准确性、合法性以及可用性做任何明示或暗示的保证。用户在使用节点时，请自行判断并承担相关风险。</p>
-<p>二、网络安全</p>
-<p>本平台仅提供节点订阅服务，不参与用户的网络访问行为。用户在使用节点时，应自行负责网络访问的安全性和合法性，不得利用本平台提供的服务从事任何违法、违规或侵犯他人权益的行为。</p>
-<p>三、隐私保护</p>
-<p>我们尊重并保护用户的个人隐私，但用户在使用本平台服务时，可能需要提供部分个人信息以完成相关操作。我们承诺将严格按照相关法律法规的要求，对用户提供的个人信息进行保密处理，并采取相应的安全措施防止信息泄露。但请注意，由于网络环境的复杂性和不确定性，我们无法保证用户个人信息在传输过程中绝对安全，用户应自行承担因信息泄露而可能产生的风险。</p>
-<p>四、版权及知识产权</p>
-<p>本平台上的所有内容（包括但不限于文字、图片、视频等）均受版权及知识产权法律保护。用户在使用本平台服务时，应遵守相关法律法规，不得擅自复制、传播或用于其他商业用途。对于侵犯本平台版权及知识产权的行为，我们将依法追究法律责任。</p>
-<p>五、免责条款</p>
-<ol>
-    <li>因网络故障、服务器维护等原因导致服务中断或无法正常使用时，本平台不承担任何责任。</li>
-    <li>用户在使用本平台服务时，因个人操作不当或第三方因素导致的损失，本平台不承担任何赔偿责任。</li>
-    <li>本平台提供的节点订阅服务仅供参考，用户在使用过程中应自行判断并承担相关风险。对于因使用本平台服务而产生的任何直接或间接损失，本平台不承担任何责任。</li>
-</ol>
-<p>六、其他</p>
-<ol>
-    <li>本免责声明自发布之日起生效，并可能根据法律法规的变化或本平台服务的调整而进行修改。用户在使用本平台服务时，应定期查看并了解最新的免责声明内容。</li>
-    <li>对于本免责声明中未明确的事项，将按照相关法律法规的规定进行处理。如用户在使用本平台服务过程中遇到任何问题或争议，可通过本平台提供的联系方式与我们联系，我们将尽力为用户解决问题。</li>
-</ol>
-<p>总之，本平台将竭诚为用户提供优质的节点订阅服务，但用户在使用服务时应自行承担相关风险并遵守相关法律法规。我们希望与用户共同营造一个安全、和谐、合法的网络环境。</p>
+                    <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-03-01">
+                            <div class="col-md-3">
+                                <a href="/news/article-65416.htm" class="xcblog-blog-url">
+                                    <img alt="同城领养宠物的平台叫什么的简单介绍" src="/uploads/20241222-1/253352ea5161b569846edfcc6423bfa1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-65416.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        同城领养宠物的平台叫什么的简单介绍                                    </h3>
+                                </a>
+                                <p>
+                                    摘要：       本篇文章给大家谈谈同城领养宠物的平台叫什么，以及对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、谁知道领养宠物的app2、...        本篇文章给大                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-03-01">
+                            <div class="col-md-3">
+                                <a href="/news/article-65415.htm" class="xcblog-blog-url">
+                                    <img alt="C#基于自定义事件EventArgs实现发布订阅模式_C#教程" src="/uploads/20241222-1/c3c6a54ea49b309f84ab33c220f79ae0.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-65415.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        C#基于自定义事件EventArgs实现发布订阅模式_C#教程                                    </h3>
+                                </a>
+                                <p>
+                                    一、事件参数      //事件参数      class CustomEventArgs:EventArgs      {          public CustomEventArgs( stri                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-03-01">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-3-1-node-share-links.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 3月1日19.1M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/becabf2a83a60c5b8ca26e178386a903.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-3-1-node-share-links.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 3月1日19.1M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、新加坡、韩国、加拿大、日本、美国、欧洲等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                        
+                        <ul class="pagination"><li><a href="/date/2025-03/page-3.htm">&laquo;</a></li> <li><a href="/date/2025-03/">1</a></li><li><a href="/date/2025-03/page-2.htm">2</a></li><li><a href="/date/2025-03/page-3.htm">3</a></li><li class="active"><span>4</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -141,16 +168,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-2-25-free-node-subscribe-links.htm" title="VPN设备 | 2月25日22.7M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享">VPN设备 | 2月25日22.7M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-71162.htm" title="简单聊一聊Vue3组件更新过程_vue.js">简单聊一聊Vue3组件更新过程_vue.js</a></li>
-                        <li class="py-2"><a href="/news/article-61177.htm" title="动物疫苗生产厂家排名榜最新名单（动物疫苗生产企业排行）">动物疫苗生产厂家排名榜最新名单（动物疫苗生产企业排行）</a></li>
+                        <li class="py-2"><a href="/news/article-71831.htm" title="做梦梦见办喜事是什么意思（做梦梦见办喜事是什么意思呀）">做梦梦见办喜事是什么意思（做梦梦见办喜事是什么意思呀）</a></li>
                         <li class="py-2"><a href="/news/article-58920.htm" title="动物医院贵吗多少钱一个月（动物医院挣钱吗）">动物医院贵吗多少钱一个月（动物医院挣钱吗）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-23-clash-v2ray-ss-ssr.htm" title="VPN设备 | 2月23日19.8M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 2月23日19.8M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-26-node-share.htm" title="VPN设备 | 2月26日20.5M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 2月26日20.5M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-66026.htm" title="宠物店一般卖几个月的猫 宠物店一般卖几个月的猫咪">宠物店一般卖几个月的猫 宠物店一般卖几个月的猫咪</a></li>
-                        <li class="py-2"><a href="/news/article-67909.htm" title="动物疫苗发展现状及未来展望论文 动物疫苗发展现状及未来展望论文怎么写">动物疫苗发展现状及未来展望论文 动物疫苗发展现状及未来展望论文怎么写</a></li>
-                        <li class="py-2"><a href="/news/article-57746.htm" title="广州领养宠物的地方是哪里（广州有领养宠物猫的地方吗?）">广州领养宠物的地方是哪里（广州有领养宠物猫的地方吗?）</a></li>
-                        <li class="py-2"><a href="/news/article-67292.htm" title="有限体积法求解一维非稳态对流扩散方程">有限体积法求解一维非稳态对流扩散方程</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-9-free-v2ray.htm" title="VPN设备 | 3月9日18.4M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享">VPN设备 | 3月9日18.4M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-57251.htm" title="vs code编写web项目">vs code编写web项目</a></li>
+                        <li class="py-2"><a href="/news/article-64792.htm" title="动物医院有什么职位吗（动物医院属于什么性质的单位）">动物医院有什么职位吗（动物医院属于什么性质的单位）</a></li>
+                        <li class="py-2"><a href="/news/article-63559.htm" title="生物颗粒燃烧炉到底咋样（生物颗粒燃烧机怎么样）">生物颗粒燃烧炉到底咋样（生物颗粒燃烧机怎么样）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-24-clash-v2ray-ss-ssr.htm" title="VPN设备 | 2月24日20M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享">VPN设备 | 2月24日20M/S|免费VPN/SSR/Shadowrocket/V2ray/Clash免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-58921.htm" title="一片片枫叶从树上落下来就像（一片片枫叶从树上落下来就像什么补充句子）">一片片枫叶从树上落下来就像（一片片枫叶从树上落下来就像什么补充句子）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-15-node-share.htm" title="VPN设备 | 2月15日18.3M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 2月15日18.3M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-69857.htm" title="动物医院叫什么名字好听的（动物医院名称大全）">动物医院叫什么名字好听的（动物医院名称大全）</a></li>
                     </ul>
     </div>
 </div>
