--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -109,6 +109,21 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-02-19">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-2-19-free-v2ray.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 2月19日18.3M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享" src="/uploads/20241222-1/a621dbd095b5853e39cd840d5e02d439.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-2-19-free-v2ray.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 2月19日18.3M/S|免费VPN/Shadowrocket/SSR/V2ray/Clash免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、欧洲、加拿大、美国、韩国、日本、香港等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-02-18">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-2-18-free-v2ray.htm" class="xcblog-blog-url">
@@ -179,16 +194,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-58313.htm" title="长沙市宠物领养中心有哪些 长沙市宠物领养中心有哪些地方">长沙市宠物领养中心有哪些 长沙市宠物领养中心有哪些地方</a></li>
-                        <li class="py-2"><a href="/news/article-66025.htm" title="上海正规宠物领养机构排名（上海2020年宠物领养活动）">上海正规宠物领养机构排名（上海2020年宠物领养活动）</a></li>
-                        <li class="py-2"><a href="/news/article-70522.htm" title="哪些属相不适合养狗狗（哪些属相不能养狗狗）">哪些属相不适合养狗狗（哪些属相不能养狗狗）</a></li>
-                        <li class="py-2"><a href="/news/article-65415.htm" title="C#基于自定义事件EventArgs实现发布订阅模式_C#教程">C#基于自定义事件EventArgs实现发布订阅模式_C#教程</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-1-node-share-links.htm" title="VPN设备 | 3月1日19.1M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 3月1日19.1M/S|免费VPN/V2ray/Clash/SSR/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-66661.htm" title="开动物医院什么资质可以开药（开动物医院什么资质可以开药店）">开动物医院什么资质可以开药（开动物医院什么资质可以开药店）</a></li>
-                        <li class="py-2"><a href="/news/article-65416.htm" title="同城领养宠物的平台叫什么的简单介绍">同城领养宠物的平台叫什么的简单介绍</a></li>
-                        <li class="py-2"><a href="/news/article-64796.htm" title="被猫咬出血了该怎么办（被猫咬出血了有什么症状）">被猫咬出血了该怎么办（被猫咬出血了有什么症状）</a></li>
+                        <li class="py-2"><a href="/news/article-60031.htm" title="Unity制作一个小星球">Unity制作一个小星球</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-2-17-free-v2ray.htm" title="VPN设备 | 2月17日19.3M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 2月17日19.3M/S|免费VPN/V2ray/SSR/Clash/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-63559.htm" title="生物颗粒燃烧炉到底咋样（生物颗粒燃烧机怎么样）">生物颗粒燃烧炉到底咋样（生物颗粒燃烧机怎么样）</a></li>
+                        <li class="py-2"><a href="/news/article-62968.htm" title="附近免费领养小狗在哪里（附近哪里可以领养宠物）">附近免费领养小狗在哪里（附近哪里可以领养宠物）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-28-node-share-links.htm" title="VPN设备 | 2月28日20.9M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 2月28日20.9M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-69857.htm" title="动物医院叫什么名字好听的（动物医院名称大全）">动物医院叫什么名字好听的（动物医院名称大全）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-7-free-high-speed-nodes.htm" title="VPN设备 | 3月7日18.1M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享">VPN设备 | 3月7日18.1M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-64182.htm" title="宠物主粮品牌排行榜最新（宠物主粮品牌排行榜最新名单）">宠物主粮品牌排行榜最新（宠物主粮品牌排行榜最新名单）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-25-free-node-subscribe-links.htm" title="VPN设备 | 2月25日22.7M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享">VPN设备 | 2月25日22.7M/S|免费VPN/Shadowrocket/Clash/V2ray/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-18-free-v2ray.htm" title="VPN设备 | 2月18日19.1M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享">VPN设备 | 2月18日19.1M/S|免费VPN/Clash/V2ray/Shadowrocket/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-60610.htm" title="Java高并发优化：中间件redis">Java高并发优化：中间件redis</a></li>
                     </ul>
     </div>
 </div>
@@ -200,7 +215,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">30</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">42</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
